<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/activity_margin"
	tools:context="jp.line.android.sdk.sample.MainActivity">

	<TextView
		android:id="@+id/txt_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/activity_margin"
		android:textColor="@android:color/holo_red_light"
		tools:text="@string/app_name"/>

	<TextView
		android:id="@+id/btn_login_native"
		style="@style/ButtonCustom"
		android:visibility="invisible"
		tools:visibility="visible"
		android:text="@string/btn_login_native" />

	<TextView
		android:id="@+id/btn_login_browser"
		style="@style/ButtonCustom"
		android:visibility="invisible"
		tools:visibility="visible"
		android:text="@string/btn_login_browser" />

	<TextView
		android:id="@+id/btn_login_email"
		style="@style/ButtonCustom"
		android:visibility="invisible"
		tools:visibility="visible"
		android:text="@string/btn_login_email" />

</LinearLayout>
